--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,9 @@
-remote_theme: pages-themes/tactile@v0.2.0
+remote_theme: pages-themes/dinky@v0.2.0
 
 show_downloads: false
+
+title: Steve Simpson
+description: Check back for coming updates!
 
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
