--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ remote_theme: pages-themes/dinky@v0.2.0
 show_downloads: false
 
 title: Steve Simpson
-description: Check back for coming updates!
+description: Software and Security Engineer
 
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
